fetching ion wallet txs and balance from indexer, ice name fix (#345)
(cherry picked from commit d7e979419d30e9b6a7cad20638fbea3bd68a275f)
